--- a/assignment-6/coding/style.css
+++ b/assignment-6/coding/style.css
@@ -38,16 +38,31 @@ body{
     width: 100%;
     object-fit: cover;
 }
-.res-card{
+.res-card {
     height: 290px;
     max-width: 270px;
     padding: 5px;
 }
-.res-card:hover,.filter-btn {
+.shimmer-card{  height: 290px;
+    width: 270px;
+    padding: 5px;
+    background-color: rgb(152, 145, 145);
+    box-shadow: 0 0 0 2px grey;
+}
+.res-card:hover , .filter-btn {
     border: 1px  solid black;
     cursor: pointer;
 }
 .res-container{
+    margin: 4%;
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    grid-gap: 2%;
+    justify-content: center;
+    align-items: center;
+}
+
+.shimmer-Container{
     margin: 4%;
     display: grid;
     grid-template-columns: repeat(3,auto);
