--- a/assignment-7/coding/style.css
+++ b/assignment-7/coding/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 .header{
-    
+    border: 1px solid rgb(110, 109, 109);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,7 +90,7 @@ body{
 .searchBox,button{
   padding: 10px;
 }
-.app{
+.app{  margin: 5px;
         background: aliceblue;
     }
 
