--- a/assignment-6/coding/style.css
+++ b/assignment-6/coding/style.css
@@ -1,119 +1,117 @@
-
-body{
-    box-sizing: border-box;
-    padding: 0;
-    margin:  0;
+body {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.header{
-    border: solid grey;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header {
+  border: solid grey;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.div{
-    width:12%;
+.div {
+  width: 12%;
 }
 
-.logo{
-    width: 100%;
-    object-fit: cover;
+.logo {
+  width: 100%;
+  object-fit: cover;
 }
-.nav-items{
-    padding: 0 20px;
+.nav-items {
+  padding: 0 20px;
 }
-.nav-items >ul{
-    display: flex;
-    justify-content: space-evenly;
-    padding-left: 0px ;
-    list-style: none;
+.nav-items > ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 0px;
+  list-style: none;
 }
-.nav-items >ul >li{
-    font-size: 2vw;
-    padding-right: 20px;
-    justify-content: space-evenly;
+.nav-items > ul > li {
+  font-size: 2vw;
+  padding-right: 20px;
+  justify-content: space-evenly;
 }
-.res-logo{
-    height: 150px;
-    width: 100%;
-    object-fit: cover;
+.res-logo {
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
 }
 .res-card {
-    height: 260px;
-    padding: 5px;
+  height: 260px;
+  padding: 5px;
 }
-.shimmer-card{  height: 290px;
-    width: 270px;
-    padding: 5px;
-    background-color: rgb(197, 192, 192);
-    box-shadow: 0 0 5px 5px rgb(197, 192, 192) ;
+.shimmer-card {
+  height: 290px;
+  width: 270px;
+  padding: 5px;
+  background-color: rgb(197, 192, 192);
+  box-shadow: 0 0 5px 5px rgb(197, 192, 192);
 }
-.res-card:hover , .filter-btn {
-    border: 1px  solid black;
-    cursor: pointer;
+.res-card:hover,
+.filter-btn {
+  border: 1px solid black;
+  cursor: pointer;
 }
-.res-container{
-    margin: 4%;
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 2%;
-    justify-content: center;
-    align-items: center;
+.res-container {
+  margin: 4%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2%;
+  justify-content: center;
+  align-items: center;
 }
 
-.shimmer-Container{
-    margin: 4%;
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 2%;
-    justify-content: center;
-    align-items: center;
+.shimmer-Container {
+  margin: 4%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2%;
+  justify-content: center;
+  align-items: center;
 }
-.ratingTime{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    margin-bottom: 5px;
+.ratingTime {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin-bottom: 5px;
 }
 .search {
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    
-}
-.filter-btn {
-    margin-left: 20px;
-    padding:10px
-}
-
-.searchBox,button{
+  display: flex;
+  margin: 20px auto;
   padding: 10px;
 }
-.app{
-        background: aliceblue;
-    }
-    h3 ,h4{
-        margin: 10px 0;
-    }
-
-
-
-    @media(min-width:900px){
-        .res-container{
-            margin:0 10%;
-        }
-    }
-
-    @media screen and (max-width:319px) and (min-width:100px){
-        .res-container{
-            grid-template-columns:auto;
-        }
-    }
-
-@media screen and (min-width:320px) and (max-width:
-450px){
-    .res-container{
-        grid-template-columns:repeat(2,auto) ;
-    }
+.filter-btn {
+  margin-left: 20px;
+  padding: 10px;
 }
 
+.searchBox,
+button {
+  padding: 10px;
+}
+.app {
+  background: aliceblue;
+}
+h3,
+h4 {
+  margin: 10px 0;
+}
+
+@media (min-width: 900px) {
+  .res-container {
+    margin: 0 10%;
+  }
+}
+
+@media screen and (max-width: 319px) and (min-width: 100px) {
+  .res-container {
+    grid-template-columns: auto;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 450px) {
+  .res-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
