add README file update UI

--- a/assignment-8/coding/style.css
+++ b/assignment-8/coding/style.css
@@ -109,6 +109,22 @@ body {
     padding-left: 10px;
     border:solid black
   }
+ .menu>ul{
+    padding: 0 10%;
+  }
+  .menu>ul >li{  
+    font-size: x-large; 
+     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    object-fit: cover;
+}
+.itemCard-image{
+    height: 15%;
+    width:20%;
+    object-fit: cover;
+    padding-bottom: 5%;
+}
   
   
   @media (min-width: 900px) {
